--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -21,6 +21,12 @@
         </div>
         
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/autocategory">
+                <span class="bi bi-bank" aria-hidden="true"></span> Catégories auto
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/operationseditor">
                 <span class="bi bi-bank" aria-hidden="true"></span> Editer les opérations
             </NavLink>
