--- a/BlazorApp/Components/Features/ComptesCourant/OperationList.razor
+++ b/BlazorApp/Components/Features/ComptesCourant/OperationList.razor
@@ -26,7 +26,7 @@ else
                     <td>@operation.Date</td>
                     <td>@operation.Description</td>
                     <td>@operation.Montant</td>
-                    <td>@operation.Type</td>
+                    <td>@operation.Categorie</td>
                     <td>@operation.Commentaire</td>
                     <td>@operation.Banque</td>
                 </tr>
