--- a/BlazorApp/Components/Pages/PageCompteCourant.razor
+++ b/BlazorApp/Components/Pages/PageCompteCourant.razor
@@ -30,7 +30,7 @@ else
                 <td>@op.Description</td>
                 <td>@op.Montant</td>
                 <td>@op.Banque</td>
-                <td>@op.Type</td>
+                <td>@op.Categorie</td>
             </tr>
         }
     </table>
@@ -70,7 +70,7 @@ else
                DateTime.Parse(o.Date) >= start &&
                DateTime.Parse(o.Date) <= end &&
                // (account == null || o.Banque == account) &&
-               (type == null || o.Type == type)
+               (type == null || o.Categorie == type)
             )
             .OrderBy(o => o.Date)
             .ToListAsync();
