--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -33,7 +33,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/database-check">
+            <NavLink class="nav-link" href="/statsdb">
                 <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Stats BDD
             </NavLink>
         </div>
