--- a/BudgetTrackerApp/Components/Layout/NavMenu.razor
+++ b/BudgetTrackerApp/Components/Layout/NavMenu.razor
@@ -4,12 +4,10 @@
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     
-    <MudNavLink Href="dashboardcomptecourant" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Dashboard CC</MudNavLink>
-    <MudNavLink Href="autocategory" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Catégories auto</MudNavLink>
-    <MudNavLink Href="operationseditor" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Editer les opérations</MudNavLink>
-    <MudNavLink Href="statsdb" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Stats BDD</MudNavLink>
-    <MudNavLink Href="importfile" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Importer fichiers</MudNavLink>
+    <MudNavLink Href="dashboardcomptecourant" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DashboardCustomize">Dashboard CC</MudNavLink>
+    <MudNavLink Href="autocategory" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.EditAttributes">Catégories auto</MudNavLink>
+    <MudNavLink Href="operationseditor" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Edit">Editer les opérations</MudNavLink>
+    <MudNavLink Href="statsdb" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Stats BDD</MudNavLink>
+    <MudNavLink Href="importfile" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FileUpload">Importer fichiers</MudNavLink>
 
 </MudNavMenu>
-
-
