--- a/BudgetTrackerApp/Components/Pages/PageOperationsEditor.razor
+++ b/BudgetTrackerApp/Components/Pages/PageOperationsEditor.razor
@@ -5,76 +5,95 @@
 @using System.Threading.Tasks
 @rendermode InteractiveServer
 @inject DatabaseSelectorService DbSelector
-
 @inject IDbContextFactory<AppDbContext> DbFactory
 @inject CategoryService CategoryService
 
 
-<h1>Edition d'opérations</h1>
+<MudText Typo="Typo.h4" Class="my-8">Édition d'opérations</MudText>
 
-<select class="form-select" @bind="SelectedValue" @bind:after="OnOptionChanged">
-    <option value="A">Opérations avec Type manquant</option>
-    <option value="B">Chèques uniquement</option>
-    <option value="C">Dernier import</option>
-    <option value="D">Erreur categorie</option>
-</select>
+<MudSelect T="string" Label="Filtre" @bind-Value="SelectedValue" @bind-Value:after="OnOptionChanged" Dense="true"
+    Class="mb-3" Style="width:300px">
 
-<button class="btn btn-primary btn-sm" @onclick="() => Refresh()"> Refresh </button>
+    <MudSelectItem T="string" Value="@("AllOps")">Toutes les opérations</MudSelectItem>
+    <MudSelectItem T="string" Value="@("A")">Opérations avec Type manquant</MudSelectItem>
+    <MudSelectItem T="string" Value="@("B")">Chèques uniquement</MudSelectItem>
+    <MudSelectItem T="string" Value="@("C")">Dernier import</MudSelectItem>
+    <MudSelectItem T="string" Value="@("D")">Erreur catégorie</MudSelectItem>
 
-<p>@TextResult</p>
+</MudSelect>
+
+<MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Small" OnClick="Refresh" Class="ms-2">
+    Refresh
+</MudButton>
 
 @if (IsLoading)
 {
-    <div class="alert alert-info">Chargement des opérations...</div>
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
+    <MudAlert Severity="Severity.Info">Chargement des opérations...</MudAlert>
 }
 else
 {
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Description</th>
-                <th class="text-end">Montant</th>
-                <th>Type</th>
-                <th></th>
-                <th>Commentaire</th>
-                <th>Banque</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var op in resultatOperations)
-            {
-                <tr>
-                    <td>@op.Date</td>
-                    <td>@op.Description</td>
-                    <td class="text-end @(op.Montant < 0 ? "text-danger" : "text-success")">
-                        @op.Montant.ToString("N2")
-                    </td>
-                    <td>
-                        <select value="@op.Categorie" @onchange="(e) => OnTypeChanged(e, op)" class="form-select">
-                            <option value=""></option>
-                            @foreach (var cat in categories)
-                            {
-                                <option value="@cat.Name">@cat.Name</option>
-                            }
-                        </select>
-                    </td>
-                    <td>
-                        @if (op.IsModified)
+    <MudTable Items="@resultatOperations" Dense="true" Hover="true" Bordered="false" Striped="true" Filter="new Func<OperationCC,bool>(FilterFunc1)" >
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">@TextResult</MudText>
+            <MudSpacer />
+            <MudTextField @bind-Value="searchString1" Placeholder="Recherche" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        </ToolBarContent>
+        <HeaderContent>
+            <MudTh><MudTableSortLabel SortBy="new Func<OperationCC, object>(x=>x.Date)">Date</MudTableSortLabel></MudTh>
+            <MudTh>Description</MudTh>
+            <MudTh Class="text-end"><MudTableSortLabel SortBy="new Func<OperationCC, object>(x=>x.Montant)">Montant</MudTableSortLabel></MudTh>
+            <MudTh>Catégorie</MudTh>
+            <MudTh></MudTh>
+            <MudTh>Commentaire</MudTh>
+            <MudTh>Banque</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd DataLabel="Date">@context.Date</MudTd>
+            <MudTd DataLabel="Description">@context.Description</MudTd>
+
+            <MudTd DataLabel="Montant" Class="@(context.Montant < 0 ? "text-danger text-end" : "text-success text-end")">
+                <div class="d-flex align-center justify-end" style="height:100%">@context.Montant.ToString("N2")</div>
+            </MudTd>
+
+            <MudTd DataLabel="Catégorie">
+                    <MudSelect T="string" Value="@context.Categorie"
+                        Variant="Variant.Outlined"
+                        ValueChanged="(value) => OnCategoryChanged(value, context)" Margin="Margin.Dense"
+                        Class="@(context.IsModified ? "mud-select-warning" : "")">
+                        <MudSelectItem Value='""'></MudSelectItem>
+                        @foreach (var cat in categories)
                         {
-                            <button class="btn btn-primary btn-sm" @onclick="() => SaveType(op)">
-                                Enregistrer
-                            </button>
+                            <MudSelectItem Value="@cat.Name">@cat.Name</MudSelectItem>
                         }
-                    </td>
-                    <td>
-                        <input class="form-control" value="@op.Commentaire" @onchange="(e) => SaveComment(e, op)" />
-                    </td>
-                    <td>@op.Banque</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+                    </MudSelect>
+            </MudTd>
+
+            <MudTd DataLabel="Action">
+                    @if (context.IsModified)
+                    {
+                        <MudButton OnClick="() => SaveCategory(context)" Variant="Variant.Filled" Color="Color.Primary"
+                            Size="Size.Small">
+                            <MudIcon Icon="@Icons.Material.Filled.Save" />
+                        </MudButton>
+                    }
+            </MudTd>
+
+            <MudTd DataLabel="Commentaire">
+                <MudTextField @bind-Value="@context.Commentaire" Margin="Margin.Dense" Variant="Variant.Outlined"
+                    OnBlur="() => SaveComment(context)" />
+            </MudTd>
+
+            <MudTd DataLabel="Banque">@context.Banque</MudTd>
+        </RowTemplate>
+        <PagerContent>
+            <MudTablePager PageSizeOptions="new int[] { 10, 25, 50, 100, int.MaxValue }"
+                           RowsPerPageString="Nb d'éléments par page"
+                           InfoFormat="{first_item}-{last_item} of {all_items}"
+                           AllItemsText="Tout"
+                           />
+        </PagerContent>
+    </MudTable>
 }
 
 
@@ -85,6 +104,8 @@ else
 
     // Indicate to UI that operations are loading
     private bool IsLoading { get; set; } = false;
+
+    private string searchString1 = "";
 
     private List<Category> categories = new();
 
@@ -97,12 +118,13 @@ else
     protected override async Task OnInitializedAsync()
     {
         actions = new Dictionary<string, Func<Task>>
-            {
-                { "A", FiltrerTypeManquant },
-                { "B", FiltrerCheques },
-                { "C", FiltrerDernierImport },
-                { "D", FiltrerErreurCat }
-            };
+{
+{ "A", FiltrerTypeManquant },
+{ "B", FiltrerCheques },
+{ "C", FiltrerDernierImport },
+{ "D", FiltrerErreurCat },
+{ "AllOps", ToutesOperations }
+};
 
         categories = await CategoryService.GetAllCategoriesAsync();
 
@@ -146,7 +168,7 @@ else
             resultatOperations = operations.Select(TraiterOperation).ToList();
         });
 
-        TextResult = $"{resultatOperations.Count} opérations sans Type trouvées dans la BDD {DbSelector.CurrentDatabase}";
+        TextResult = $"{resultatOperations.Count} opérations correspondantes";
         IsLoading = false;
         await InvokeAsync(StateHasChanged);
     }
@@ -155,74 +177,47 @@ else
     {
         using var db = DbFactory.CreateDbContext();
 
-        Console.WriteLine($"DB: {db.Database.GetDbConnection().DataSource}");
-
         var rules = db.AutoCategoryRules.ToList();
 
-        Console.WriteLine($"---> op.Decription = {op.Description} <---");
-        
         foreach (var r in rules)
         {
-            Console.WriteLine($"-----\nId de la règle = {r.Id}");
             if (string.IsNullOrEmpty(r.Category))
                 continue; // If no category set, ignore this rule
 
             // Check if Description is matching pattern
-            if (!string.IsNullOrEmpty(r.Pattern) && !string.IsNullOrEmpty(op.Description) && !op.Description.Contains(r.Pattern, StringComparison.OrdinalIgnoreCase))
+            if (!string.IsNullOrEmpty(r.Pattern) && !string.IsNullOrEmpty(op.Description) && !op.Description.Contains(r.Pattern,
+            StringComparison.OrdinalIgnoreCase))
                 continue;
 
             // Check if amount is below minimum
-            if (r.MinAmount.HasValue)
-                Console.WriteLine($"{op.Description} {op.Montant} < {r.MinAmount.Value} : {op.Montant < r.MinAmount.Value}");
-            else
-                Console.WriteLine($"r.MinAmount.HasValue = {r.MinAmount.HasValue}");
-
             if (r.MinAmount.HasValue && op.Montant < r.MinAmount.Value)
                 continue;
 
             // Check if amount is above maximum
-            if (r.MaxAmount.HasValue)
-                Console.WriteLine($"{op.Description} {op.Montant} > {r.MaxAmount.Value} : {op.Montant > r.MaxAmount.Value}");
-            else
-                Console.WriteLine($"r.MaxAmount.HasValue = {r.MaxAmount.HasValue}");
-
             if (r.MaxAmount.HasValue && op.Montant > r.MaxAmount.Value)
                 continue;
 
             // Check if date is before minimum
-            if (r.MinDate.HasValue)
-                Console.WriteLine($"{op.Description} {op.Date} > {r.MinDate.Value} : {DateTime.Parse(op.Date) >= r.MinDate.Value}");
-            else
-                Console.WriteLine($"r.MinDate.HasValue = {r.MinDate.HasValue}");
-
             if (r.MinDate.HasValue && DateTime.Parse(op.Date) < r.MinDate.Value)
                 continue;
 
             // Check if date is after maximum
-            if (r.MaxDate.HasValue)
-                Console.WriteLine($"{op.Description} {op.Date} > {r.MaxDate.Value} : {DateTime.Parse(op.Date) >= r.MaxDate.Value}");
-            else
-                Console.WriteLine($"r.MaxDate.HasValue = {r.MaxDate.HasValue}");
-
             if (r.MaxDate.HasValue && DateTime.Parse(op.Date) > r.MaxDate.Value)
                 continue;
 
-            // Every thing is matching
-            Console.WriteLine($"Find a match with \"{r.Category}\" (ID #{r.Id})");
-
+            // Everything is matching
             return r.Category;
         }
-
-        Console.WriteLine($"No auto category found");
 
         return "";
     }
 
-    private void OnTypeChanged(ChangeEventArgs e, OperationCC op)
+    private async void OnCategoryChanged(string newCategory, OperationCC op)
     {
         Console.WriteLine($"Changement Type");
-        op.Categorie = e.Value?.ToString();
-        op.IsModified = true;
+        op.Categorie = newCategory;
+
+        await SaveCategory(op);
     }
 
 
@@ -246,7 +241,7 @@ else
             resultatOperations = operations.Select(TraiterOperation).ToList();
         });
 
-        TextResult = $"{resultatOperations.Count} Cheques sans Type trouvés dans la BDD {DbSelector.CurrentDatabase}";
+        TextResult = $"{resultatOperations.Count} opérations correspondantes";
         IsLoading = false;
         await InvokeAsync(StateHasChanged);
     }
@@ -257,14 +252,14 @@ else
         resultatOperations = new List<OperationCC>();
         StateHasChanged(); // rafraîchi l’UI immédiatement
 
-        string lastDateImport = "";
+        string? lastDateImport = "";
 
         await Task.Run(() =>
         {
             using var db = DbFactory.CreateDbContext();
 
             // Get the latest import date
-            var lastDateImport = db.Operations.Max(op => op.DateImport);
+            lastDateImport = db.Operations.Max(op => op.DateImport);
 
             var operations = db.Operations
     .Where(op =>
@@ -274,10 +269,33 @@ else
             resultatOperations = operations.Select(TraiterOperation).ToList();
         });
 
-        TextResult = $"{resultatOperations.Count} opérations dans l'import le plus récent du {lastDateImport} dans la BDD {DbSelector.CurrentDatabase}";
+        TextResult = $"{resultatOperations.Count} opérations correspondantes (import du {lastDateImport})";
         IsLoading = false;
         await InvokeAsync(StateHasChanged);
 
+    }
+
+    private async Task ToutesOperations()
+    {
+        IsLoading = true;
+        resultatOperations = new List<OperationCC>();
+        StateHasChanged(); // rafraîchi l’UI immédiatement
+
+
+        await Task.Run(() =>
+        {
+            using var db = DbFactory.CreateDbContext();
+
+            var validCategories = db.Categories.Select(c => c.Name).ToHashSet();
+
+            var operations = db.Operations.ToList();
+
+            resultatOperations = operations.ToList();
+        });
+
+        TextResult = $"{resultatOperations.Count} opérations correspondantes";
+        IsLoading = false;
+        await InvokeAsync(StateHasChanged);
     }
 
 
@@ -295,21 +313,21 @@ else
             var validCategories = db.Categories.Select(c => c.Name).ToHashSet();
 
             Console.WriteLine($"validCategories.length = {validCategories.Count}");
-            
-            foreach(var cat in validCategories)
+
+            foreach (var cat in validCategories)
             {
                 Console.WriteLine($"validCategories = {cat}");
             }
 
             var operations = db.Operations
-                .Where(o => !string.IsNullOrEmpty(o.Categorie) && !validCategories.Contains(o.Categorie))
-                .ToList();
+    .Where(o => !string.IsNullOrEmpty(o.Categorie) && !validCategories.Contains(o.Categorie))
+    .ToList();
 
             Console.WriteLine($"operations.length = {operations.Count}");
             resultatOperations = operations.ToList();
         });
 
-        TextResult = $"{resultatOperations.Count} opération(s) avec une catégorie incohérente dans la BDD {DbSelector.CurrentDatabase}";
+        TextResult = $"{resultatOperations.Count} opérations correspondantes";
         IsLoading = false;
         await InvokeAsync(StateHasChanged);
 
@@ -330,6 +348,19 @@ else
         return op;
     }
 
+    private bool FilterFunc1(OperationCC listOperations) => FilterFunc(listOperations, searchString1);
+
+    private bool FilterFunc(OperationCC listOperations, string searchString)
+    {
+        if (string.IsNullOrEmpty(listOperations.Description))
+            return false;
+        if (string.IsNullOrWhiteSpace(searchString))
+            return true;
+        if (listOperations.Description.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+        return false;
+    }
+
     private void Refresh()
     {
         if (actions.TryGetValue(SelectedValue, out var action))
@@ -338,7 +369,7 @@ else
         }
     }
 
-    private async Task SaveType(OperationCC op)
+    private async Task SaveCategory(OperationCC op)
     {
         using var db = DbFactory.CreateDbContext();
 
@@ -352,10 +383,9 @@ else
         op.IsModified = false;
     }
 
-    private async Task SaveComment(ChangeEventArgs e, OperationCC op)
+    private async Task SaveComment(OperationCC op)
     {
         Console.WriteLine($"Changement Commentaire");
-        op.Commentaire = e.Value?.ToString();
 
         using var db = DbFactory.CreateDbContext();
 
